2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi: Update coreboot status info.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/grub_cmd_date.in: New test for datetime.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/partmap_test.in: Fix missing qemudisk setting.

2013-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Support i386-ieee1275 grub-mkrescue and make check on it.

2013-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Merge powerpc grub-mkrescue flavour with common. Use xorriso HFS+
	feature for it.

2013-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi: Fix description of GRUB_CMDLINE_XEN and
	GRUB_CMDLINE_XEN_DEFAULT.
	Reported by: 	Marc Warne (GigaTux) <gigatux>

2013-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Import new gnulib.

2013-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Use ACPI shutdown intests as traditional port was removed.

2013-04-11  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub.d/30_os-prober.in: Add onstr to entries for visual
	distinction.

2013-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix missing PVs if they don't contain "interesting" LV. Closes #38677.
	Fix few warining messages and leaks while on it.

2013-04-09  Andrey Borzenkov <arvidjaar@gmail.com>

	* autogen.sh: Use "-h", not "-f", to test for existence of symbolic
	links under grub-core/lib/libgcrypt-grub/mpi.

2013-04-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix ia64-efi image generation on big-endian machines. Deduplicate
	some code while on it.
	Reported by: Leif Lindholm.

2013-04-08  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/Makefile.core.def: Add kern/elfXX.c to elf module
	as extra_dist.

2013-04-08  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/term/i386/pc/console.c: Fix cursor moving algorithm.

2013-04-08  Bryan Hundven <bryanhundven@gmail.com>

	* docs/grub-dev.texi: Move @itemize after @subsection to satisfy
	texinfo-5.1.
